tests/unit/language/overloads/duplicate_signature_errors.arche
// RUN: ! %arche build -o %t %s 2>%t.err
// RUN: grep -qiF "share a parameter signature" %t.err

a :: func(x: int) -> int {
  return x;
}
b :: func(x: int) -> int {
  return x + 1;
}
g :: func { a, b }
// error: members 'a' and 'b' share a parameter signature
